<resources>
    <string name="app_name">RedPackTest</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_codigo_postal">Código Postal</string>
    <string name="title_geocode">GeoCode</string>
    <string name="title_trago">Trago</string>

    <!--errores-->
    <string name="error_tragos">No se pudo obtener la información en tragos</string>
    <string name="error_codigo_postal">No se pudo obtener la información del codigo postal</string>
    <string name="ninguna_coincidencia">No se encontro ninguna coincidencia</string>
    <string name="error_geocode">No se pudo obtener la información del geocode</string>

    <!--geocode-->
    <string name="guia">Guia</string>
    <string name="consignatario">Consignatario</string>
    <string name="calle">Calle</string>
    <string name="colonia">Colonia</string>
    <string name="municipio">Municipio</string>
    <string name="estado">Estado</string>
    <string name="postal">Postal</string>
    <string name="extra">Extra</string>

    <!--genericos-->
    <string name="buscar">Buscar</string>
    <string name="limpiar">Limpiar</string>
</resources>