<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.example.redpacktest.ui.geocode.GeoCodeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context=".ui.geocode.GeoCodeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/guia"
            android:id="@+id/etGuia">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/consignatario"
            android:id="@+id/etConsignatario">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calle"
            android:id="@+id/etCalle">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/colonia"
            android:id="@+id/etColonia">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/municipio"
            android:id="@+id/etMunicipio">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/estado"
            android:id="@+id/etEstado">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/postal"
            android:id="@+id/etPostal">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/extra"
            android:id="@+id/etExtra">
        </EditText>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buscar"
            android:id="@+id/btnBuscar">
        </Button>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listGeoCode"
            tools:listitem="@layout/fragment_geocode"
            app:layoutManager="LinearLayoutManager">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</RelativeLayout>